force-app/main/default/objects/Opportunity/fields/Billing_TBD__c.field-meta.xml
<CustomField>
    <fullName>Billing_TBD__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billing TBD</label>
    <type>Checkbox</type>
</CustomField>