force-app/main/default/objects/Opportunity/fields/Engagement_Model__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Model__c</fullName>
    <description>This Picklist will mention Customer Engagement Model</description>
    <label>Engagement Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise RFP (Multi-SI)</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>End Customer via Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>