force-app/main/default/objects/Opportunity/fields/Opportunity_tagging__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_tagging__c</fullName>
    <label>Opportunity tagging</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>